# musicapi

./: LICENSE  README.md  app.py  kuwo.js  kuwoutils.py  main.py  musicapi.py  pyproject.toml  requirements.txt  tools.js  xhsapi.py
node/: QQMusic.js  QQSign.js  kuwo.js
